--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -237,7 +237,7 @@ Componentes del View-Model:
 
 \begin{frame}
 \frametitle{Aplicación}
-
+Páginas de Registro y Autenticación
 \begin{columns}
 \begin{column}{0.25\textwidth}
 \begin{center}
@@ -289,7 +289,7 @@ Componentes del View-Model:
 
 \begin{frame}
 \frametitle{Aplicación}
-
+Página de Creación de Mascota
 \begin{columns}
 \begin{column}{0.25\textwidth}
 \begin{center}
@@ -311,7 +311,7 @@ Componentes del View-Model:
 \begin{column}{0.25\textwidth}
 \begin{center}
 
-\fbox{\includegraphics[scale = 0.16]{Images/homePage.jpg}}
+\fbox{\includegraphics[scale = 0.12]{Images/homePage.jpg}}
 
 \end{center}
 \end{column}
@@ -323,7 +323,7 @@ Componentes del View-Model:
 
 \begin{frame}
 \frametitle{Aplicación}
-
+Advertencia sobre la eliminación de una mascota
 \begin{columns}
 \begin{column}{0.25\textwidth}
 \begin{center}
@@ -341,7 +341,7 @@ Componentes del View-Model:
 
 \begin{frame}
 \frametitle{Aplicación}
-
+Páginas de importación y exportación de mascota
 \begin{columns}
 \begin{column}{0.25\textwidth}
 \begin{center}
