--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -50,9 +50,57 @@ El desarrollo de la app debe tener en cuenta :
 \item Almacenamiento de Historiales Clínicos
 \item Compartimiento de Datos 
 
+
 \footnote{Dayron}
 \end{itemize}
 \end{frame}
+
+
+\begin{frame}
+\frametitle{Estado del arte}
+Similares de desarrollos en el tema:
+\begin{itemize}
+\item Web del Registro Cubano de Mascotas (RCM)
+\includegraphics[scale =0.2]{Images/RCM.jpg}
+\item  BACuba \\
+\includegraphics[scale =0.08]{Images/BAC.jpg}
+\item  Dog Health\\
+\includegraphics[scale =0.09]{Images/DogH.png}
+\footnote{Dayron}
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Historia Clínica Veterinaia}
+
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale =0.5]{Images/HC1.png}}
+
+\end{center}
+\end{column}
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale =0.17]{Images/HC2.jpg}}
+
+\end{center}
+\end{column}
+\end{columns}
+
+
+%\includegraphics[scale =0.6]{Images/HC1.png}
+%\includegraphics[scale =0.6]{Images/HC2.jfif}
+
+
+\footnote{Pablo}
+\end{frame}
+
+
+
 
 \begin{frame}
 \frametitle{Importancia del problema}
@@ -86,8 +134,19 @@ Razones por las que son necesarias resolver el problema:
 Tecnologías utilizadas:
 \begin{itemize}
 \item Flutter
+
+\includegraphics[scale =0.32]{Images/LogodeFlutter.jpg}
+
+
 \item Kotlin
+
+\includegraphics[scale =0.08]{Images/LogoKotlin.jpg}
 \item SQLite
+
+
+
+
+\includegraphics[scale =0.07]{Images/LogodeSQLite.png}
 \end{itemize}
 \footnote{David}
 \end{frame}
@@ -104,6 +163,14 @@ Componentes:
 \item View
 \item ViewModel
 \end{itemize}
+
+\begin{center}
+
+\includegraphics[scale =0.2]{Images/MVVMwip.png}
+
+
+\end{center}
+
 
 \footnote{David}
 \end{frame}
@@ -603,6 +670,21 @@ Aparente contradicción entre la selección de una tecnología en la hipótesis 
 \end{itemize}
 
 \end{frame}
+
+
+\begin{frame}
+\frametitle{¿Por qué Flutter?}
+\begin{itemize}
+\item Java
+\item Kotlin
+\item Xamarin
+\item React Native
+\item \textbf{Flutter}
+
+\end{itemize}
+
+\end{frame}
+
 
 
 \begin{frame}
