--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -155,8 +155,6 @@ Las bibliotecas de Flutter para el manejo de conexiones vía Wifi entre disposit
 \begin{itemize}
 
 
-\item openDatabase(...)
-\item getDatabasesPath()
 \item execute(...)
 \item insert(...)
 \item update(...)
@@ -237,13 +235,14 @@ Componentes del View-Model:
 
 \begin{frame}
 \frametitle{Aplicación}
-Páginas de Registro y Autenticación
 \begin{columns}
 \begin{column}{0.25\textwidth}
 \begin{center}
 
 \fbox{\includegraphics[scale = 0.1]{Images/init.jpg}}
-
+\begin{small}
+\caption{Página Inicial de la Aplicación}
+\end{small}
 \end{center}
 \end{column}
 
@@ -251,7 +250,9 @@ Páginas de Registro y Autenticación
 \begin{center}
 
 \fbox{\includegraphics[scale = 0.1]{Images/register.jpg}}
-
+\begin{small}
+\caption{Página de Registro}
+\end{small}
 \end{center}
 \end{column}
 
@@ -259,12 +260,13 @@ Páginas de Registro y Autenticación
 \begin{center}
 
 \fbox{\includegraphics[scale = 0.1]{Images/login.jpg}}
-
+\begin{small}
+\caption{Página de Autenticación}
+\end{small}
 \end{center}
 \end{column}
 
 \end{columns}
-\footnote{Dayron}
 \end{frame}
 
 
@@ -283,19 +285,39 @@ Páginas de Registro y Autenticación
 \end{column}
 
 \end{columns}
-\footnote{Dayron}
+
 \end{frame}
 
 
 \begin{frame}
 \frametitle{Aplicación}
-Página de Creación de Mascota
+
 \begin{columns}
-\begin{column}{0.25\textwidth}
+
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.16]{Images/createButt.jpg}}
+\begin{small}
+
+
+\caption{Botón de Crear Mascota}
+\end{small}
+\end{center}
+\end{column}
+
+
+
+\begin{column}{0.5\textwidth}
 \begin{center}
 
 \fbox{\includegraphics[scale = 0.16]{Images/createPet.jpg}}
+\begin{small}
 
+
+
+\caption{Página de Creación de Mascotas}
+\end{small}
 \end{center}
 \end{column}
 
@@ -341,20 +363,44 @@ Advertencia sobre la eliminación de una mascota
 
 \begin{frame}
 \frametitle{Aplicación}
-Páginas de importación y exportación de mascota
+Botones de importación y exportación de mascota
 \begin{columns}
-\begin{column}{0.25\textwidth}
+\begin{column}{0.5\textwidth}
 \begin{center}
 
-\fbox{\includegraphics[scale = 0.12]{Images/import.jpg}}
+\fbox{\includegraphics[scale = 0.12]{Images/homeA1.jpg}}
 
 \end{center}
 \end{column}
 
-\begin{column}{0.25\textwidth}
+\end{columns}
+\footnote{Dayron}
+\end{frame}
+
+
+
+
+
+\begin{frame}
+\frametitle{Aplicación}
+\begin{columns}
+\begin{column}{0.3\textwidth}
 \begin{center}
 
-\fbox{\includegraphics[scale = 0.12]{Images/exportdevice.jpg}}
+\fbox{\includegraphics[scale = 0.1]{Images/import.jpg}}
+\begin{small}
+\caption{Página de Importación}
+\end{small}
+\end{center}
+\end{column}
+
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.1]{Images/exportdevice.jpg}}
+\begin{small}
+\caption{Página de Exportación}
+\end{small}
 
 \end{center}
 \end{column}
@@ -369,19 +415,23 @@ Páginas de importación y exportación de mascota
 \frametitle{Aplicación}
 
 \begin{columns}
-\begin{column}{0.25\textwidth}
+\begin{column}{0.3\textwidth}
 \begin{center}
 
-\fbox{\includegraphics[scale = 0.12]{Images/addForm.jpg}}
-
+\fbox{\includegraphics[scale = 0.1]{Images/addForm.jpg}}
+\begin{small}
+\caption{Página de Formularios}
+\end{small}
 \end{center}
 \end{column}
 
-\begin{column}{0.25\textwidth}
+\begin{column}{0.3\textwidth}
 \begin{center}
 
-\fbox{\includegraphics[scale = 0.12]{Images/MedVis.jpg}}
-
+\fbox{\includegraphics[scale = 0.1]{Images/MedVis.jpg}}
+\begin{small}
+\caption{Formulario de Visita Médica}
+\end{small}
 \end{center}
 \end{column}
 
@@ -394,18 +444,18 @@ Páginas de importación y exportación de mascota
 \frametitle{Aplicación}
 
 \begin{columns}
-\begin{column}{0.25\textwidth}
+\begin{column}{0.3\textwidth}
 \begin{center}
 
-\fbox{\includegraphics[scale = 0.12]{Images/hc.jpg}}
+\fbox{\includegraphics[scale = 0.1]{Images/hc.jpg}}
 
 \end{center}
 \end{column}
 
-\begin{column}{0.25\textwidth}
+\begin{column}{0.3\textwidth}
 \begin{center}
 
-\fbox{\includegraphics[scale = 0.12]{Images/selecthc.jpg}}
+\fbox{\includegraphics[scale = 0.1]{Images/selecthc.jpg}}
 
 \end{center}
 \end{column}
@@ -424,6 +474,39 @@ Páginas de importación y exportación de mascota
 
 \fbox{\includegraphics[scale = 0.12]{Images/medVshow.jpg}}
 
+\end{center}
+\end{column}
+
+
+\end{columns}
+\footnote{Dayron}
+\end{frame}
+
+
+
+\begin{frame}
+\frametitle{Aplicación}
+
+\begin{columns}
+
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.2]{Images/synButt.jpg}}
+\begin{small}
+\caption{Botón de Sincronización Manual}
+\end{small}
+\end{center}
+\end{column}
+
+
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.17]{Images/synchro.jpg}}
+\begin{small}
+\caption{Mensaje de Sincronización Exitosa}
+\end{small}
 \end{center}
 \end{column}
 
