--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -51,8 +51,8 @@ El desarrollo de la app debe tener en cuenta :
 \item Compartimiento de Datos 
 
 
-\footnote{Dayron}
 \end{itemize}
+\footnote{Dayron}
 \end{frame}
 
 
@@ -100,8 +100,6 @@ Similares de desarrollos en el tema:
 \end{frame}
 
 
-
-
 \begin{frame}
 \frametitle{Importancia del problema}
 Razones por las que son necesarias resolver el problema:
@@ -134,18 +132,10 @@ Razones por las que son necesarias resolver el problema:
 Tecnologías utilizadas:
 \begin{itemize}
 \item Flutter
-
 \includegraphics[scale =0.32]{Images/LogodeFlutter.jpg}
-
-
 \item Kotlin
-
 \includegraphics[scale =0.08]{Images/LogoKotlin.jpg}
 \item SQLite
-
-
-
-
 \includegraphics[scale =0.07]{Images/LogodeSQLite.png}
 \end{itemize}
 \footnote{David}
@@ -171,7 +161,6 @@ Componentes:
 
 \end{center}
 
-
 \footnote{David}
 \end{frame}
 
@@ -181,6 +170,8 @@ Componentes:
 
 \begin{frame}
 \frametitle{Estructura de Model}
+
+
 
 \begin{itemize}
 \item Componente de comunicación con el servidor (Online)
@@ -341,7 +332,7 @@ Componentes del View-Model:
 
 \begin{frame}
 \frametitle{Aplicación}
-
+Página principal de la aplicación
 \begin{columns}
 \begin{column}{0.25\textwidth}
 \begin{center}
@@ -352,7 +343,7 @@ Componentes del View-Model:
 \end{column}
 
 \end{columns}
-
+\footnote{Dayron}
 \end{frame}
 
 
@@ -395,7 +386,7 @@ Componentes del View-Model:
 
 \begin{frame}
 \frametitle{Aplicación}
-
+Página principal de la aplicación con una mascota
 \begin{columns}
 \begin{column}{0.25\textwidth}
 \begin{center}
@@ -412,18 +403,123 @@ Componentes del View-Model:
 
 \begin{frame}
 \frametitle{Aplicación}
-Advertencia sobre la eliminación de una mascota
+
+
 \begin{columns}
-\begin{column}{0.25\textwidth}
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.12]{Images/deleteButt.jpg}}
+\begin{small}
+\caption{Botón para eliminar mascota}
+\end{small}
+\end{center}
+\end{column}
+
+
+\begin{column}{0.3\textwidth}
 \begin{center}
 
 \fbox{\includegraphics[scale = 0.12]{Images/deleteWarning.jpg}}
-
+\begin{small}
+\caption{Advertencia sobre la eliminación}
+\end{small}
 \end{center}
 \end{column}
 
 \end{columns}
 \footnote{Dayron}
+\end{frame}
+
+
+
+
+
+\begin{frame}
+\frametitle{Aplicación}
+
+\begin{columns}
+
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.1]{Images/formButt.jpg}}
+\begin{small}
+\caption{Botón para acceder a los formularios}
+\end{small}
+\end{center}
+\end{column}
+
+
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.1]{Images/addForm.jpg}}
+\begin{small}
+\caption{Página de Formularios}
+\end{small}
+\end{center}
+\end{column}
+
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.1]{Images/MedVis.jpg}}
+\begin{small}
+\caption{Formulario de Visita Médica}
+\end{small}
+\end{center}
+\end{column}
+
+\end{columns}
+\footnote{Dayron}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Aplicación}
+
+\begin{columns}
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.1]{Images/hc.jpg}}
+\begin{small}
+\caption{Historia Clínica de la Mascota}
+\end{small}
+\end{center}
+\end{column}
+
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.1]{Images/selecthc.jpg}}
+\begin{small}
+\caption{Selección del tipo de formulario}
+\end{small}
+\end{center}
+\end{column}
+
+\end{columns}
+\footnote{Dayron}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Aplicación}
+Muestra de una consulta de Visita Médica
+\begin{columns}
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.1]{Images/medVshow.jpg}}
+
+\end{center}
+\end{column}
+
+
+\end{columns}
+
 \end{frame}
 
 
@@ -478,78 +574,6 @@ Botones de importación y exportación de mascota
 
 
 
-\begin{frame}
-\frametitle{Aplicación}
-
-\begin{columns}
-\begin{column}{0.3\textwidth}
-\begin{center}
-
-\fbox{\includegraphics[scale = 0.1]{Images/addForm.jpg}}
-\begin{small}
-\caption{Página de Formularios}
-\end{small}
-\end{center}
-\end{column}
-
-\begin{column}{0.3\textwidth}
-\begin{center}
-
-\fbox{\includegraphics[scale = 0.1]{Images/MedVis.jpg}}
-\begin{small}
-\caption{Formulario de Visita Médica}
-\end{small}
-\end{center}
-\end{column}
-
-\end{columns}
-\footnote{Dayron}
-\end{frame}
-
-
-\begin{frame}
-\frametitle{Aplicación}
-
-\begin{columns}
-\begin{column}{0.3\textwidth}
-\begin{center}
-
-\fbox{\includegraphics[scale = 0.1]{Images/hc.jpg}}
-
-\end{center}
-\end{column}
-
-\begin{column}{0.3\textwidth}
-\begin{center}
-
-\fbox{\includegraphics[scale = 0.1]{Images/selecthc.jpg}}
-
-\end{center}
-\end{column}
-
-\end{columns}
-\footnote{Dayron}
-\end{frame}
-
-
-\begin{frame}
-\frametitle{Aplicación}
-
-\begin{columns}
-\begin{column}{0.25\textwidth}
-\begin{center}
-
-\fbox{\includegraphics[scale = 0.12]{Images/medVshow.jpg}}
-
-\end{center}
-\end{column}
-
-
-\end{columns}
-\footnote{Dayron}
-\end{frame}
-
-
 
 \begin{frame}
 \frametitle{Aplicación}
@@ -579,7 +603,7 @@ Botones de importación y exportación de mascota
 
 
 \end{columns}
-\footnote{Dayron}
+
 \end{frame}
 
 
@@ -593,14 +617,6 @@ Botones de importación y exportación de mascota
 \begin{center}
 
 \fbox{\includegraphics[scale = 0.12]{Images/initialPage.jpg}}
-
-\end{center}
-\end{column}
-\begin{column}{0.5\textwidth}
-
-\begin{center}
-
-\fbox{\includegraphics[scale = 0.12]{Images/pet.jpg}}
 
 \end{center}
 \end{column}
@@ -660,20 +676,6 @@ Aparente contradicción entre la selección de una tecnología en la hipótesis 
 
 \begin{frame}
 \frametitle{Tecnologías analizadas}
-\begin{itemize}
-\item Java
-\item Kotlin
-\item Xamarin
-\item React Native
-\item \textbf{Flutter}
-
-\end{itemize}
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{¿Por qué Flutter?}
 \begin{itemize}
 \item Java
 \item Kotlin
