--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -36,7 +36,6 @@ Creación de una herramienta que permita gestionar los datos clínicos históric
 
 \end{block}
 
-\footnote{Dayron}
 \end{frame}
 
 
@@ -52,7 +51,7 @@ El desarrollo de la app debe tener en cuenta :
 
 
 \end{itemize}
-\footnote{Dayron}
+
 \end{frame}
 
 
@@ -66,7 +65,7 @@ Similares de desarrollos en el tema:
 \includegraphics[scale =0.08]{Images/BAC.jpg}
 \item  Dog Health\\
 \includegraphics[scale =0.09]{Images/DogH.png}
-\footnote{Dayron}
+
 \end{itemize}
 \end{frame}
 
@@ -96,7 +95,7 @@ Similares de desarrollos en el tema:
 %\includegraphics[scale =0.6]{Images/HC2.jfif}
 
 
-\footnote{Pablo}
+
 \end{frame}
 
 
@@ -109,7 +108,7 @@ Razones por las que son necesarias resolver el problema:
 \item Datos difícilmente transferibles
 \item Inconsistencia de los Datos
 \end{itemize}
-\footnote{Dayron}
+
 \end{frame}
 
 \begin{frame}
@@ -122,7 +121,7 @@ Razones por las que son necesarias resolver el problema:
 \item Insertar notas extras
 \item Visualización
 \end{itemize}
-\footnote{David}
+
 \end{frame}
 
 
@@ -138,7 +137,7 @@ Tecnologías utilizadas:
 \item SQLite
 \includegraphics[scale =0.07]{Images/LogodeSQLite.png}
 \end{itemize}
-\footnote{David}
+
 \end{frame}
 
 
@@ -161,7 +160,6 @@ Componentes:
 
 \end{center}
 
-\footnote{David}
 \end{frame}
 
 
@@ -182,7 +180,7 @@ Componentes:
 
 \end{itemize}
 
-\footnote{David}
+
 \end{frame}
 
 \begin{frame}
@@ -191,7 +189,7 @@ Componentes:
 \begin{block}{}
 Se establece comunicación con el servidor a través del protocolo HTTPS.
 \end{block}
-\footnote{David}
+
 \end{frame}
 
 \begin{frame}
@@ -202,7 +200,7 @@ En la implementación de este componente fue utilizado Kotlin para hacer uso del
 
 Las bibliotecas de Flutter para el manejo de conexiones vía Wifi entre dispositivos están restringidos para SDK de Android mayor o igual que 26.
 \end{block}
-\footnote{David}
+
 \end{frame}
 
 \begin{frame}
@@ -219,7 +217,7 @@ Las bibliotecas de Flutter para el manejo de conexiones vía Wifi entre disposit
 \item query(...)
 \item delete(...)
 \end{itemize}
-\footnote{Pablo}
+
 \end{frame}
 
 
@@ -233,7 +231,7 @@ Las bibliotecas de Flutter para el manejo de conexiones vía Wifi entre disposit
 
 \end{center}
 
-\footnote{Pablo}
+
 \end{frame}
 
 
@@ -247,7 +245,7 @@ Los 5 principios utilizados para el diseño de la interfaz:
 \item Retroalimentación (Feedback)
 \item Accesibilidad
 \end{itemize}
-\footnote{Dayron}
+
 \end{frame}
 
 \begin{frame}
@@ -272,7 +270,7 @@ Las dos aproximaciones utilizadas para el diseño:
 \end{center}
 \end{column}
 \end{columns}
-\footnote{Dayron}
+
 \end{frame}
 
 
@@ -287,7 +285,7 @@ Componentes del View-Model:
 
 \end{itemize}
 
-\footnote{Dayron}
+
 \end{frame}
 
 
@@ -343,7 +341,6 @@ Página principal de la aplicación
 \end{column}
 
 \end{columns}
-\footnote{Dayron}
 \end{frame}
 
 
@@ -380,7 +377,7 @@ Página principal de la aplicación
 \end{column}
 
 \end{columns}
-\footnote{Dayron}
+
 \end{frame}
 
 
@@ -397,7 +394,7 @@ Página principal de la aplicación con una mascota
 \end{column}
 
 \end{columns}
-\footnote{Dayron}
+
 \end{frame}
 
 
@@ -428,10 +425,57 @@ Página principal de la aplicación con una mascota
 \end{column}
 
 \end{columns}
-\footnote{Dayron}
+
 \end{frame}
 
 
+
+\begin{frame}
+\frametitle{Aplicación}
+Botones de importación y exportación de mascota
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.12]{Images/homeA1.jpg}}
+
+\end{center}
+\end{column}
+
+\end{columns}
+
+\end{frame}
+
+
+
+
+
+\begin{frame}
+\frametitle{Aplicación}
+\begin{columns}
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.1]{Images/import.jpg}}
+\begin{small}
+\caption{Página de Importación}
+\end{small}
+\end{center}
+\end{column}
+
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.1]{Images/exportdevice.jpg}}
+\begin{small}
+\caption{Página de Exportación}
+\end{small}
+
+\end{center}
+\end{column}
+
+\end{columns}
+\end{frame}
 
 
 
@@ -472,7 +516,6 @@ Página principal de la aplicación con una mascota
 \end{column}
 
 \end{columns}
-\footnote{Dayron}
 \end{frame}
 
 
@@ -501,7 +544,6 @@ Página principal de la aplicación con una mascota
 \end{column}
 
 \end{columns}
-\footnote{Dayron}
 \end{frame}
 
 
@@ -513,65 +555,16 @@ Muestra de una consulta de Visita Médica
 \begin{center}
 
 \fbox{\includegraphics[scale = 0.1]{Images/medVshow.jpg}}
-
-\end{center}
-\end{column}
-
-
-\end{columns}
-
-\end{frame}
-
-
-
-\begin{frame}
-\frametitle{Aplicación}
-Botones de importación y exportación de mascota
-\begin{columns}
-\begin{column}{0.5\textwidth}
-\begin{center}
-
-\fbox{\includegraphics[scale = 0.12]{Images/homeA1.jpg}}
-
-\end{center}
-\end{column}
-
-\end{columns}
-\footnote{Dayron}
-\end{frame}
-
-
-
-
-
-\begin{frame}
-\frametitle{Aplicación}
-\begin{columns}
-\begin{column}{0.3\textwidth}
-\begin{center}
-
-\fbox{\includegraphics[scale = 0.1]{Images/import.jpg}}
 \begin{small}
-\caption{Página de Importación}
+\caption{}
 \end{small}
 \end{center}
 \end{column}
 
-\begin{column}{0.3\textwidth}
-\begin{center}
-
-\fbox{\includegraphics[scale = 0.1]{Images/exportdevice.jpg}}
-\begin{small}
-\caption{Página de Exportación}
-\end{small}
-
-\end{center}
-\end{column}
 
 \end{columns}
-\footnote{Dayron}
-\end{frame}
 
+\end{frame}
 
 
 
@@ -622,7 +615,6 @@ Botones de importación y exportación de mascota
 \end{column}
 \end{columns}
 \end{itemize}
-\footnote{Pablo}
 \end{frame}
 
 
@@ -638,7 +630,6 @@ Botones de importación y exportación de mascota
 \item Sistema de avisos y alarmas.
 \end{itemize}
 
-\footnote{Pablo}
 \end{frame}
 
 
