--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -48,7 +48,7 @@ El desarrollo de la app debe tener en cuenta :
 \item Sistema de registro de usuarios
 \item Almacenamiento de Historiales Clínicos
 \item Compartimiento de Datos 
-
+\item Trabajo Offline
 
 \end{itemize}
 
@@ -58,20 +58,38 @@ El desarrollo de la app debe tener en cuenta :
 \begin{frame}
 \frametitle{Estado del arte}
 Similares de desarrollos en el tema:
-\begin{itemize}
-\item Web del Registro Cubano de Mascotas (RCM)
-\includegraphics[scale =0.2]{Images/RCM.jpg}
-\item  BACuba \\
-\includegraphics[scale =0.08]{Images/BAC.jpg}
-\item  Dog Health\\
-\includegraphics[scale =0.09]{Images/DogH.png}
 
-\end{itemize}
+
+\begin{columns}
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\includegraphics[scale =0.3]{Images/RCM.jpg}\\
+\caption{RCM}\
+%\footnote{Web del Registro Cubano de Mascotas.}
+\end{center}
+\end{column}
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\includegraphics[scale =0.12]{Images/BAC.jpg}\\
+\caption{BACuba}
+\end{center}
+\end{column}
+
+\begin{column}{0.3\textwidth}
+\begin{center}
+\includegraphics[scale =0.13]{Images/DogH.png}\\
+\caption{Dog Health}
+\end{center}
+\end{column}
+\end{columns}
+
 \end{frame}
 
 
 \begin{frame}
-\frametitle{Historia Clínica Veterinaia}
+\frametitle{Historia Clínica Veterinaria}
 
 \begin{columns}
 \begin{column}{0.5\textwidth}
@@ -89,10 +107,6 @@ Similares de desarrollos en el tema:
 \end{center}
 \end{column}
 \end{columns}
-
-
-%\includegraphics[scale =0.6]{Images/HC1.png}
-%\includegraphics[scale =0.6]{Images/HC2.jfif}
 
 
 
@@ -114,12 +128,13 @@ Razones por las que son necesarias resolver el problema:
 \begin{frame}
 \frametitle{Funcionalidades de la aplicación}
 \begin{itemize}
-\item Creación de una mascota:
+\item Creación de una mascota
 \item Eliminar mascota
 \item Transferir una mascota a otro usuario de manera local.
 \item Insertar nueva consulta
 \item Insertar notas extras
 \item Visualización
+
 \end{itemize}
 
 \end{frame}
@@ -129,14 +144,34 @@ Razones por las que son necesarias resolver el problema:
 \frametitle{Tecnologías utilizadas}
 
 Tecnologías utilizadas:
-\begin{itemize}
-\item Flutter
-\includegraphics[scale =0.32]{Images/LogodeFlutter.jpg}
-\item Kotlin
-\includegraphics[scale =0.08]{Images/LogoKotlin.jpg}
-\item SQLite
-\includegraphics[scale =0.07]{Images/LogodeSQLite.png}
-\end{itemize}
+
+
+
+\begin{columns}
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\includegraphics[scale =0.45]{Images/LogodeFlutter.jpg}\\
+\caption{Flutter}\
+%\footnote{Web del Registro Cubano de Mascotas.}
+\end{center}
+\end{column}
+\begin{column}{0.3\textwidth}
+\begin{center}
+
+\includegraphics[scale =0.10]{Images/LogoKotlin.jpg}\\
+\caption{Kotlin}
+\end{center}
+\end{column}
+
+\begin{column}{0.3\textwidth}
+\begin{center}
+\includegraphics[scale =0.08]{Images/LogodeSQLite.png}\\
+\caption{SQLite}
+\end{center}
+\end{column}
+\end{columns}
+
 
 \end{frame}
 
@@ -169,7 +204,7 @@ Componentes:
 \begin{frame}
 \frametitle{Estructura de Model}
 
-
+El Model está dividido en tres componentes principales:
 
 \begin{itemize}
 \item Componente de comunicación con el servidor (Online)
@@ -188,8 +223,12 @@ Componentes:
 
 \begin{block}{}
 Se establece comunicación con el servidor a través del protocolo HTTPS.
+Este protocolo fue elegido gracias a que se priorizó la seguridad de los datos en la comunicación con el servidor.
 \end{block}
 
+\\
+\\
+Biblioteca: \textbf{http}(Pub.dev)
 \end{frame}
 
 \begin{frame}
@@ -290,7 +329,7 @@ Componentes del View-Model:
 
 
 \begin{frame}
-\frametitle{Aplicación}
+\frametitle{Aplicación: Registro y Autenticación}
 \begin{columns}
 \begin{column}{0.25\textwidth}
 \begin{center}
@@ -345,7 +384,7 @@ Página principal de la aplicación
 
 
 \begin{frame}
-\frametitle{Aplicación}
+\frametitle{Aplicación: Creación de Mascota}
 
 \begin{columns}
 
@@ -399,7 +438,7 @@ Página principal de la aplicación con una mascota
 
 
 \begin{frame}
-\frametitle{Aplicación}
+\frametitle{Aplicación: Eliminación}
 
 
 \begin{columns}
@@ -434,7 +473,7 @@ Página principal de la aplicación con una mascota
 
 
 \begin{frame}
-\frametitle{Aplicación}
+\frametitle{Aplicación: Creación de Consultas}
 
 \begin{columns}
 
@@ -474,7 +513,7 @@ Página principal de la aplicación con una mascota
 
 
 \begin{frame}
-\frametitle{Aplicación}
+\frametitle{Aplicación: Historial Clínico}
 
 \begin{columns}
 \begin{column}{0.3\textwidth}
@@ -502,7 +541,7 @@ Página principal de la aplicación con una mascota
 
 
 \begin{frame}
-\frametitle{Aplicación}
+\frametitle{Aplicación: Consulta}
 Muestra de una consulta de Visita Médica
 \begin{columns}
 \begin{column}{0.3\textwidth}
@@ -523,7 +562,7 @@ Muestra de una consulta de Visita Médica
 
 
 \begin{frame}
-\frametitle{Aplicación}
+\frametitle{Aplicación: Exportación e Importación de Mascotas}
 Botones de importación y exportación de mascota
 \begin{columns}
 \begin{column}{0.5\textwidth}
@@ -543,7 +582,7 @@ Botones de importación y exportación de mascota
 
 
 \begin{frame}
-\frametitle{Aplicación}
+\frametitle{Aplicación: Exportación e Importación de Mascotas}
 \begin{columns}
 \begin{column}{0.3\textwidth}
 \begin{center}
@@ -572,7 +611,7 @@ Botones de importación y exportación de mascota
 
 
 \begin{frame}
-\frametitle{Aplicación}
+\frametitle{Aplicación: Sincronización}
 
 \begin{columns}
 
@@ -607,16 +646,10 @@ Botones de importación y exportación de mascota
 \begin{frame}
 \frametitle{Conclusiones}
 \begin{itemize}
-\begin{columns}
-\begin{column}{0.5\textwidth}
-
-\begin{center}
-
-\fbox{\includegraphics[scale = 0.12]{Images/initialPage.jpg}}
-
-\end{center}
-\end{column}
-\end{columns}
+\item[\checkmark] Se investigaron los requerimientos de las historias clínicas veterinarias.
+\item[\checkmark] Fue realizado un estudio sobre aplicaciones móviles existentes.
+\item[\checkmark] Se investigaron diferentes tecnologías de desarrollo.
+\item[\checkmark] La aplicación cumple con los objetivos planteados.
 \end{itemize}
 \end{frame}
 
@@ -649,7 +682,7 @@ Botones de importación y exportación de mascota
 \begin{frame}
 \frametitle{Primera pregunta del oponente}
 \begin{block}{Pregunta 1}
-Aparente contradicción entre la selección de una tecnología en la hipótesis y el contenido de una de las tareas planteadas.
+ Una de ls tareas planteadas en la Tesis dice ''Analizar y probar tecnologías de desarrollo de aplicaciones móviles y bases de datos que permitan el rápido desarrollo del producto deseado''. Sin embargo, un poco antes, al plantear las hipótesis, escriben ''Trabajando sobre la plataforma Flutter a través de Dart''. Aparentemente hay una contradicción entre la tarea de analizar y probar diversas tecnologías y la selección a priori de UNA tecnología concreta para el desarrollo en las hipótesis del trabajo. ¿Podrían comentar al respecto?
 \end{block}
 \end{frame}
 
@@ -683,13 +716,37 @@ Aparente contradicción entre la selección de una tecnología en la hipótesis 
 
 
 
+
+
+
+\begin{frame}
+\frametitle{Ventajas de Flutter}
+
+\begin{itemize}
+\item Representación en todas las plataformas.
+\item Funcionalidad de Hot Reload.
+\item Fácil diseño de interfaz gráfica.
+\item Documentación completa y de calidad.
+\item Es Open-Source.
+\end{itemize}
+
+\end{frame}
+
+
+
+
+
+
+
+
+
+
 \begin{frame}
 \frametitle{Segunda pregunta del oponente}
 \begin{block}{Pregunta 2}
-¿Han considerado la idea de incluir fotos e inlcuso videos del comportamiento del animal como parte de la historia, pensando en futuras comparaciones visuales por parte de los profesionales al consultarlos?
+De todos es conocido que los profesionales de la salud, e imagino que en el caso de la salud animal de cierta forma esté también presente, es muy importante el ''ojo clínico'', la visualización del paciente, no solamente los datos alfanumérifcos asociados a una HC tradicinal. ¿Han considerado la idea de incluir fotos e inlcuso videos del comportamiento del animal como parte de la historia, pensando en futuras comparaciones visuales por parte de los profesionales al consultarlos?
 \end{block}
 \end{frame}
-
 
 
 
@@ -715,5 +772,91 @@ Aparente contradicción entre la selección de una tecnología en la hipótesis 
 \end{columns}
 
 \end{frame}
+
+
+\begin{frame}
+\frametitle{Con respecto al almacenamiento interno.}
+Tipos de datos soportados por SQLite:
+\begin{itemize}
+\item Integer
+\item Real
+\item Text
+\item BLOB
+\end{itemize}
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Con respecto al almacenamiento interno.}
+Tipos de datos soportados por SQLite:
+\begin{itemize}
+\item Integer
+\item Real
+\item Text
+\item BLOB
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Transmisión de Datos}
+Problemas:
+\begin{itemize}
+\item Almacenamiento de imágenes en el servidor.
+\item Sincronización de imágenes en dispositivos
+\item Envío de mascotas de manera local
+\end{itemize}
+
+
+\end{frame}
+\begin{frame}
+\frametitle{Guardar imágenes}
+Biblioteca:\textbf{image\_picker}(Pub.dev)
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\includegraphics[scale = 0.32]{Images/photoExample.png}
+
+\end{center}
+\end{column}
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\includegraphics[scale = 0.48]{Images/RadiologyP.png}
+
+\end{center}
+\end{column}
+\end{columns}
+
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Cargar imágenes}
+Biblioteca:\textbf{image\_picker}(Pub.dev)
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\includegraphics[scale = 0.48]{Images/History.PNG}
+
+\end{center}
+\end{column}
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\includegraphics[scale = 0.48]{Images/HistoryP.PNG}
+
+\end{center}
+\end{column}
+\end{columns}
+
+
+\end{frame}
+
+
+
 
 \end{document}
