--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -152,7 +152,7 @@ Tecnologías utilizadas:
 \begin{center}
 
 \includegraphics[scale =0.45]{Images/LogodeFlutter.jpg}\\
-\caption{Flutter}\
+
 %\footnote{Web del Registro Cubano de Mascotas.}
 \end{center}
 \end{column}
@@ -160,14 +160,14 @@ Tecnologías utilizadas:
 \begin{center}
 
 \includegraphics[scale =0.10]{Images/LogoKotlin.jpg}\\
-\caption{Kotlin}
+
 \end{center}
 \end{column}
 
 \begin{column}{0.3\textwidth}
 \begin{center}
 \includegraphics[scale =0.08]{Images/LogodeSQLite.png}\\
-\caption{SQLite}
+
 \end{center}
 \end{column}
 \end{columns}
@@ -190,7 +190,7 @@ Componentes:
 
 \begin{center}
 
-\includegraphics[scale =0.2]{Images/MVVMwip.png}
+\includegraphics[scale =0.3]{Images/mvvm.jpg}
 
 
 \end{center}
@@ -641,6 +641,15 @@ Botones de importación y exportación de mascota
 
 \end{frame}
 
+\begin{frame}
+\frametitle{Pasos del proceso de sincronización}
+\begin{itemize}
+\item Actualización de campos específicos.
+\item Notificación de mascotas creadas y/o recibidas.
+\item Descargas de nuevas consultas.
+\item Transferencia de nuevas consultas.
+\end{itemize}
+\end{frame}
 
 
 \begin{frame}
@@ -682,7 +691,7 @@ Botones de importación y exportación de mascota
 \begin{frame}
 \frametitle{Primera pregunta del oponente}
 \begin{block}{Pregunta 1}
- Una de ls tareas planteadas en la Tesis dice ''Analizar y probar tecnologías de desarrollo de aplicaciones móviles y bases de datos que permitan el rápido desarrollo del producto deseado''. Sin embargo, un poco antes, al plantear las hipótesis, escriben ''Trabajando sobre la plataforma Flutter a través de Dart''. Aparentemente hay una contradicción entre la tarea de analizar y probar diversas tecnologías y la selección a priori de UNA tecnología concreta para el desarrollo en las hipótesis del trabajo. ¿Podrían comentar al respecto?
+ Una de las tareas planteadas en la Tesis dice ''Analizar y probar tecnologías de desarrollo de aplicaciones móviles y bases de datos que permitan el rápido desarrollo del producto deseado''. Sin embargo, un poco antes, al plantear las hipótesis, escriben ''Trabajando sobre la plataforma Flutter a través de Dart''. Aparentemente hay una contradicción entre la tarea de analizar y probar diversas tecnologías y la selección a priori de UNA tecnología concreta para el desarrollo en las hipótesis del trabajo. ¿Podrían comentar al respecto?
 \end{block}
 \end{frame}
 
@@ -751,7 +760,7 @@ De todos es conocido que los profesionales de la salud, e imagino que en el caso
 
 
 \begin{frame}
-\frametitle{Primeros diseños de la aplicaión(7/2022)}
+\frametitle{Primeros diseños de la aplicación(7/2022)}
 
 
 \begin{columns}
@@ -788,24 +797,11 @@ Tipos de datos soportados por SQLite:
 
 
 \begin{frame}
-\frametitle{Con respecto al almacenamiento interno.}
-Tipos de datos soportados por SQLite:
-\begin{itemize}
-\item Integer
-\item Real
-\item Text
-\item BLOB
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}
 \frametitle{Transmisión de Datos}
 Problemas:
 \begin{itemize}
 \item Almacenamiento de imágenes en el servidor.
-\item Sincronización de imágenes en dispositivos
-\item Envío de mascotas de manera local
+\item Envío de mascotas de manera local.
 \end{itemize}
 
 
